# cw-template

./: .env.example  .gitignore  .gitpod.yml  Cargo.toml  Developing.md  Importing.md  LICENSE  Makefile  NOTICE  Publishing.md  README.md  cargo-generate.toml  contract.wasm  hash.txt  optimize.sh  post-script.rhai  teja.key
.cargo/: config  config.toml
.circleci/: config.yml
.github/actions/install-rust/: README.md  action.yml
.github/workflows/: Basic.yml  Integration.yml  Static.yml
examples/: schema.rs
meta/: README.md  appveyor.yml  test_generate.sh
schema/: query_msg.json  state.json
src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  interface.rs  lib.rs  msg.rs  state.rs
tests/: README.md  checksum.rs  count.rs  counter.rs  integration.rs  integration.ts  integration_tests.rs  package.json
