[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"
required-features = ["deploy"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
deploy = ["cw-orch/daemon", "dotenv", "env_logger"]

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }

cw-orch = { version = "0.26.0" }

env_logger = { version = "0.11.5", optional = true }
dotenv = { version = "0.15.0", optional = true }

[dev-dependencies]
{% unless minimal %}
cw-multi-test = "2.0.0"
{% endunless %}